refactor: 重构了一些命令，暂时移除了AI画作功能